<resources>
    <string name="app_name">DiaDraw</string>
    <string name="rename">Переименовать</string>
    <string name="delete">Удалить</string>
    <string name="file_creation">Создание файла</string>
    <string name="enter_file_name">Введите название файла:</string>
    <string name="cancel">Отмена</string>
    <string name="create">Создать</string>
    <string name="file_rename">Переименование файла</string>
    <string name="change">Изменить</string>
    <string name="text_change">Введите текст элемента:</string>
    <string name="export">Экспортировать</string>
    <string name="settings">Настройки</string>
    <string name="generate_code">Сгенерировать код</string>
    <string name="help">Помощь</string>
    <string name="auto_save">Промежуток автоматического сохранения</string>
    <string name="work_area_color">Цвет рабочей области</string>
    <string name="figures_color">Цвет блоков схемы</string>
    <string name="font_color">Цвет текста</string>
    <string name="border_color">Цвет границ</string>
    <string name="save">Сохранить</string>
</resources>
