<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_primary"
    tools:context=".Views.SettingsActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/work_area_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/figures_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/font_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/border_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextAutoSaveTime"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="3"
        android:numeric="integer"
        android:textColor="@color/color_font_primary"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/auto_save"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewWorkAreaColor"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextAutoSaveTime"
        app:srcCompat="@color/color_empty" />

    <ImageView
        android:id="@+id/imageViewFiguresColor"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWorkAreaColor"
        app:srcCompat="@color/color_empty" />

    <ImageView
        android:id="@+id/imageViewFontColor"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFiguresColor"
        app:srcCompat="@color/color_empty" />

    <ImageView
        android:id="@+id/imageViewBorderColor"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFontColor"
        app:srcCompat="@color/color_empty" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>